# wsl-idf

./: Cargo.toml  LICENSE  README.MD  README.en.md
.github/scripts/: rename-release-assets.mjs
.github/workflows/: release.yml
src/: branding.rs  main.rs  serial_output.rs
src/serial_output/: crash_decode.rs  rules.rs
vsc-plugin/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json  wsl-idf-0.1.0.vsix
vsc-plugin/src/: config.ts  extension.ts  ports.ts  runner.ts  statusBar.ts
