[package]
name = "wsl-idf"
version = "0.1.0"
edition = "2024"
authors = ["wheat <vaemc520@qq.com>"]
description = "Flash and monitor ESP-IDF firmware from WSL2 via Windows esptool"
license = "MIT"
repository = "https://github.com/vaemc/wsl-idf"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
